[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.7.11"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0.29"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"
solana-validator = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
